# advent-of-code

./: .gitignore  2b.hs  3a.hs  3a.py  3b.hs  3b.py  4b.hs  5a.hs  5b.hs  AdventOfCode2018.cabal  LICENSE  advent.cabal  flake.nix  stack.yaml
src/: 10a.hs  11a.hs  11b.hs  12a.hs  12b.hs  16a.hs  16b.hs  1a.hs  1b.hs  20a.hs  2a.hs  3a.hs  3b.hs  4a.hs  5a.hs  7b.hs  9a.hs  9b.hs  DayX.hs  Util.hs
src/2015/: 10b.hs  11b.hs  12a.hs  12b.hs  13b.hs  14a.hs  14b.hs  15b.hs  16a.hs  18a.hs  18b.hs  1a.hs  21a.hs  25a.hs  3a.hs  4b.hs  5b.hs  7a.hs  7b.hs  8b.hs  9a.hs
src/2018/: 11a.hs  11b.hs  12a.hs  20b.hs  2b.hs  3b.py  4b.hs  5b.hs  9a.hs  9b.hs
src/Data/: Cyclic.hs  Grid.hs
src/Numeric/: Bool.hs  Char.hs
src/Year2015/: Day10a.hs  Day11a.hs  Day13a.hs  Day15a.hs  Day16b.hs  Day1a.hs  Day1b.hs  Day21b.hs  Day23a.hs  Day23b.hs  Day2a.hs  Day2b.hs  Day3b.hs  Day4a.hs  Day5a.hs  Day6a.hs  Day6b.hs  Day8a.hs  Day9b.hs
src/Year2016/: Day11.hs
src/Year2018/: 3a.py  Day16b.hs  Day20.hs  Day23.hs  Day7a.hs
src/Year2020/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  DayX.hs  Util.hs
src/Year2020/Data/: Cyclic.hs  Grid.hs
src/Year2021/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day22.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
src/Year2022/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day21.hs  Day23.hs  Day24.hs  Day25.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  a.sh
src/Year2024/: Day1.hs  Day10.hs  Day13.hs
src/Year2025/: Day1.hs  Day11.hs  Day12.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs
