cabal-version:       2.4

name:                advent
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             MIT
license-file:        LICENSE
author:              mingmingrr
maintainer:          mingmingrr@gmail.com
-- copyright:
-- category:
-- extra-source-files:

executable advent
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base

                     , megaparsec
                     , lens
                     , conduit
                     , arithmoi
                     , logict
                     , linear
                     , random
                     , hmatrix
                     , MonadRandom
                     , memoize
                     , split
                     , parallel
                     , deepseq
                     , raw-strings-qq
                     , stm
                     , monad-loops
                     , here
                     , dlist
                     , pretty-simple
                     , sbv
                     , pqueue
                     , pointedlist
                     , parser-combinators
                     , algebraic-graphs
                     , map-syntax
                     , regex-pcre
                     , extra
                     , bimap

                     , array
                     , bytestring
                     , containers
                     , deepseq
                     , directory
                     , extensible-exceptions
                     , filepath
                     , mtl
                     , parsec
                     , pretty
                     , process
                     , stm
                     , template-haskell
                     , text
                     , time
                     , transformers

                     , async
                     , attoparsec
                     , case-insensitive
                     , exceptions
                     , fgl
                     , integer-logarithms
                     , mtl
                     , parallel
                     , parsec
                     , QuickCheck
                     , scientific
                     , split
                     , stm
                     , text
                     , transformers
                     , unordered-containers
                     , vector

  hs-source-dirs:      src
  default-language:    Haskell2010
